; ModuleID = '/home/carl/AnghaBench/postgres/contrib/btree_gin/extr_btree_gin.c_gin_btree_extract_value.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/btree_gin/extr_btree_gin.c_gin_btree_extract_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @gin_btree_extract_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gin_btree_extract_value(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %9 = call i32 @PG_GETARG_DATUM(i32 0)
  store i32 %9, i32* %6, align 4
  %10 = call i64 @PG_GETARG_POINTER(i32 1)
  %11 = inttoptr i64 %10 to i32*
  store i32* %11, i32** %7, align 8
  %12 = call i64 @palloc(i32 4)
  %13 = inttoptr i64 %12 to i32*
  store i32* %13, i32** %8, align 8
  %14 = load i32, i32* %5, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %20

16:                                               ; preds = %2
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @PG_DETOAST_DATUM(i32 %17)
  %19 = call i32 @PointerGetDatum(i32 %18)
  store i32 %19, i32* %6, align 4
  br label %20

20:                                               ; preds = %16, %2
  %21 = load i32, i32* %6, align 4
  %22 = load i32*, i32** %8, align 8
  %23 = getelementptr inbounds i32, i32* %22, i64 0
  store i32 %21, i32* %23, align 4
  %24 = load i32*, i32** %7, align 8
  store i32 1, i32* %24, align 4
  %25 = load i32*, i32** %8, align 8
  %26 = call i32 @PG_RETURN_POINTER(i32* %25)
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @PG_GETARG_DATUM(i32) #1

declare dso_local i64 @PG_GETARG_POINTER(i32) #1

declare dso_local i64 @palloc(i32) #1

declare dso_local i32 @PointerGetDatum(i32) #1

declare dso_local i32 @PG_DETOAST_DATUM(i32) #1

declare dso_local i32 @PG_RETURN_POINTER(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
